k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atolye15-app-deployment
spec:
  selector:
    matchLabels:
      app: atolye15-app-deployment
  template:
    metadata:
      labels:
        app: atolye15-app-deployment
    spec:
      containers:
        - name: atolye15-app
          image: mustafasayilgan/atolye15-app:v1
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
      imagePullSecrets:
        - name: regcred
