k8s/atolye15-app-ingress-stage.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atolye15-app-ingress-stage
  namespace: stage
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: atolye15-app-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
